Fix padding in topbar and add scrollbar in sidebar playlist

--- a/style/style.css
+++ b/style/style.css
@@ -241,9 +241,6 @@
 
 .container .jumbotron .sidebar .playlist{
     flex-grow: 1;
-}
-
-.container .jumbotron .sidebar .playlist ul{
     overflow: auto;
 }
 
@@ -337,7 +334,7 @@
 .container .jumbotron .main .gallery .header-gallery ul li{
     display: inline-block;
     list-style-type: none;
-    padding: 20px 5px;
+    padding: 5px 5px;
     font-size: 14px;
     cursor: pointer;
 }
